--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div>
                 <h1 className="text-2xl md:text-3xl font-bold tracking-tight">FY26 SSA Reforecasting Planner</h1>
                 <p className="text-sm md:text-base text-slate-600 mt-1">
-                  Explore trade-offs between the FY26 total SNAP application team goal, the number of full-time case assistance navigators, and individual annual and monthly goals.
+                  Explore trade-offs between the FY26 total SNAP application team goal for SSA, the number of full-time Case Assistance Navigators (CAN'S), and annual and monthly goals for each CAN.
                 </p>
               </div>
             </header>
@@ -83,7 +83,7 @@
               </div>
 
               <div className="bg-white rounded-2xl shadow p-4">
-                <label className="block text-sm font-medium text-slate-700"># of full-time case assistance navigators</label>
+                <label className="block text-sm font-medium text-slate-700"># of full-time Case Assistance Navigators</label>
                 <div className="mt-3">
                   <input
                     type="range"
@@ -107,11 +107,11 @@
                     ))}
                   </div>
                 </div>
-                <p className="mt-2 text-xs text-slate-500">Constrained to 17–23 as noted.</p>
+                <p className="mt-2 text-xs text-slate-500">Constrained to range: 17–23.</p>
               </div>
 
               <div className="bg-white rounded-2xl shadow p-4">
-                <label className="block text-sm font-medium text-slate-700">Individual annual goal per case assistance navigator</label>
+                <label className="block text-sm font-medium text-slate-700">Individual annual goal per CAN</label>
                 <div className="mt-3">
                   <input
                     type="range"
@@ -149,9 +149,9 @@
                 </div>
               </div>
               <div className="bg-white rounded-2xl shadow p-4">
-                <div className="text-xs uppercase tracking-wide text-slate-500">Avg per case assistance navigator @ {navigators}</div>
+                <div className="text-xs uppercase tracking-wide text-slate-500">Annual avg SNAP apps per CAN @ {navigators}</div>
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredIndGoal)}</div>
-                <div className="text-xs text-slate-500 mt-1">Required individual annual target if number of full-time case assistance navigators is fixed.</div>
+                <div className="text-xs text-slate-500 mt-1">Required individual annual target if number of full-time CAN's is fixed.</div>
               </div>
             </section>
 
@@ -159,7 +159,7 @@
             <section className="grid md:grid-cols-3 gap-4">
               <div className="bg-white rounded-2xl shadow p-5">
                 <h2 className="font-semibold text-lg">If you fix the individual annual goal</h2>
-                <p className="text-slate-600 text-sm mt-1">…how many case assistance navigators would be needed to hit the team goal?</p>
+                <p className="text-slate-600 text-sm mt-1">…how many CAN's would be needed to hit the annual team goal?</p>
                 <div className="mt-4 flex items-center justify-between">
                   <div>
                     <div className="text-xs uppercase tracking-wide text-slate-500">Required navigators</div>
@@ -177,16 +177,16 @@
               </div>
 
               <div className="bg-white rounded-2xl shadow p-5">
-                <h2 className="font-semibold text-lg">If you fix the number of case assistance navigators</h2>
-                <p className="text-slate-600 text-sm mt-1">…what individual annual goal is needed to hit the team goal?</p>
+                <h2 className="font-semibold text-lg">If you fix the number of CAN's</h2>
+                <p className="text-slate-600 text-sm mt-1">…what individual annual goal is needed to hit the annual team goal?</p>
                 <div className="mt-4 flex items-center justify-between">
                   <div>
                     <div className="text-xs uppercase tracking-wide text-slate-500">Required individual goal</div>
                     <div className="text-3xl font-bold">{nf.format(requiredIndGoal)}</div>
-                    <div className="text-xs text-slate-500 mt-1">Ceiling of team goal ÷ case assistance navigators.</div>
+                    <div className="text-xs text-slate-500 mt-1">Ceiling of team goal ÷ # of CAN's.</div>
                   </div>
                   <div className="text-right">
-                    <div className="text-xs uppercase tracking-wide text-slate-500">Current individual setting</div>
+                    <div className="text-xs uppercase tracking-wide text-slate-500">Current settings</div>
                     <div className="text-sm font-medium">{nf.format(indGoal)}</div>
                     <div className={`text-xs mt-1 ${indGoal >= requiredIndGoal ? "text-emerald-600" : "text-rose-600"}`}>
                       {indGoal >= requiredIndGoal ? "Meets or exceeds" : "Below requirement"}
@@ -196,16 +196,16 @@
               </div>
 
               <div className="bg-white rounded-2xl shadow p-5">
-                <h2 className="font-semibold text-lg">Monthly view (if you fix the # of case assistance navigators)</h2>
-                <p className="text-slate-600 text-sm mt-1">…what <span className="font-medium">individual monthly</span> goal is needed to hit the team goal?</p>
+                <h2 className="font-semibold text-lg">Monthly view (if you fix the # of CAN's)</h2>
+                <p className="text-slate-600 text-sm mt-1">…what individual monthly goal is needed to hit the annual team goal?</p>
                 <div className="mt-4 flex items-center justify-between">
                   <div>
                     <div className="text-xs uppercase tracking-wide text-slate-500">Required individual monthly target</div>
                     <div className="text-3xl font-bold">{nf.format(requiredIndGoalMonthly)}</div>
-                    <div className="text-xs text-slate-500 mt-1">Ceiling of (team goal ÷ 12) ÷ case assistance navigators.</div>
+                    <div className="text-xs text-slate-500 mt-1">Ceiling of (team goal ÷ 12) ÷ # of CAN's.</div>
                   </div>
                   <div className="text-right">
-                    <div className="text-xs uppercase tracking-wide text-slate-500">Current individual setting (monthly)</div>
+                    <div className="text-xs uppercase tracking-wide text-slate-500">Current settings</div>
                     <div className="text-sm font-medium">{nf.format(Math.ceil(indGoal / 12))}</div>
                     <div className={`text-xs mt-1 ${Math.ceil(indGoal / 12) >= requiredIndGoalMonthly ? "text-emerald-600" : "text-rose-600"}`}>
                       {Math.ceil(indGoal / 12) >= requiredIndGoalMonthly ? "Meets or exceeds" : "Below requirement"}
