--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div>
                 <h1 className="text-2xl md:text-3xl font-bold tracking-tight">FY26 - SSA Reforecasting Planner</h1>
                 <p className="text-sm md:text-base text-slate-600 mt-1">
-                  This tool allows for easy exploration of the trade-offs between three variables: A (the FY26 total SNAP application team goal for SSA), B (the number of full-time case assistance navigators (CAN's)), and C (the annual and monthly goals for each CAN). The first row of panels allows the user to manually adjust the values for those three variables, while the second row of panels summarizes how those “current settings” would project out into the key metrics of a potential re-forecasting.
+                  This tool allows for easy exploration of the trade-offs between three variables: a) the FY26 total SNAP application team goal for SSA, b) the number of full-time Case Assistance Navigators (CAN's), and c) the annual and monthly goals for each CAN. The first row of panels allows the user to manually adjust the values for those three variables, while the second row of panels summarizes how those “current settings” would project out into the key metrics of a potential reforecasting.
                 </p>
               </div>
             </header>
@@ -122,9 +122,9 @@
                 <p className="mt-2 text-xs text-slate-500">Constrained to range: 17–23.</p>
               </div>
 
-              {/* Annual goal per CAN */}
+              {/* AnnualSnapAppGoalPerCan. */}
               <div className="bg-white rounded-2xl shadow p-4">
-                <label className="block text-sm font-medium text-slate-700">Annual goal per CAN</label>
+                <label className="block text-sm font-medium text-slate-700">AnnualSnapAppGoalPerCan.</label>
                 <div className="mt-3 flex items-center gap-2">
                   <input
                     type="range"
@@ -171,27 +171,21 @@
               {/* Annual capacity (based on current settings) */}
               <div className="bg-white rounded-2xl shadow p-4">
                 <div className="text-xs uppercase tracking-wide text-slate-500">
-                  Annual SNAP application capacity <span className="normal-case text-slate-400">(based on current settings)</span>
+                  Annual SNAP app. capacity <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className={`text-2xl font-semibold mt-1 ${meetsGoal ? "text-emerald-600" : "text-rose-600"}`}>
                   {nf.format(capacity)}
                 </div>
-                <div className={`text-xs mt-1 ${meetsGoal ? "text-emerald-600" : "text-rose-600"}`}>
-                  {meetsGoal ? "Meets or exceeds team goal" : "Below team goal"}
-                </div>
               </div>
 
-              {/* Required CAN's (based on current settings) */}
+              {/* Required # of CAN's (based on current settings) */}
               <div className="bg-white rounded-2xl shadow p-4">
                 <div className="text-xs uppercase tracking-wide text-slate-500">
-                  Required CAN's<br />
+                  Required # of CAN's<br />
                   <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredNavigators)}</div>
                 <div className="text-xs text-slate-500 mt-2">Current range: {NAV_MIN}–{NAV_MAX}</div>
-                <div className={`text-xs mt-1 ${requiredNavigators >= NAV_MIN && requiredNavigators <= NAV_MAX ? "text-emerald-600" : "text-rose-600"}`}>
-                  {requiredNavigators >= NAV_MIN && requiredNavigators <= NAV_MAX ? "Within range" : "Outside range"}
-                </div>
               </div>
 
               {/* Required individual annual goal (based on current settings) */}
@@ -200,9 +194,6 @@
                   Required individual annual goal <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredIndGoal)}</div>
-                <div className={`text-xs mt-1 ${indGoal >= requiredIndGoal ? "text-emerald-600" : "text-rose-600"}`}>
-                  {indGoal >= requiredIndGoal ? "Meets or exceeds" : "Below requirement"}
-                </div>
               </div>
 
               {/* Required monthly individual goal (based on current settings) */}
@@ -211,9 +202,6 @@
                   Required monthly individual goal <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredIndGoalMonthly)}</div>
-                <div className={`text-xs mt-1 ${Math.ceil(indGoal / 12) >= requiredIndGoalMonthly ? "text-emerald-600" : "text-rose-600"}`}>
-                  {Math.ceil(indGoal / 12) >= requiredIndGoalMonthly ? "Meets or exceeds" : "Below requirement"}
-                </div>
               </div>
             </section>
           </div>
