--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
               {/* AnnualSnapAppGoalPerCan. */}
               <div className="bg-white rounded-2xl shadow p-4">
-                <label className="block text-sm font-medium text-slate-700">AnnualSnapAppGoalPerCan.</label>
+                <label className="block text-sm font-medium text-slate-700">Annual SNAP app. goal per CAN.</label>
                 <div className="mt-3 flex items-center gap-2">
                   <input
                     type="range"
@@ -184,8 +184,7 @@
                   Required # of CAN's<br />
                   <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
-                <div className="text-2xl font-semibold mt-1">{nf.format(requiredNavigators)}</div>
-                <div className="text-xs text-slate-500 mt-2">Current range: {NAV_MIN}–{NAV_MAX}</div>
+                <div className="text-2xl font-semibold mt-1">{nf.format(requiredNavigators)}</div>                
               </div>
 
               {/* Required individual annual goal (based on current settings) */}
