--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
                     ))}
                   </div>
                 </div>
-                <p className="mt-2 text-xs text-slate-500">Constrained to range: 17–23.</p>
               </div>
 
-              {/* AnnualSnapAppGoalPerCan. */}
+              {/* Annual SNAP app. goal per CAN. */}
               <div className="bg-white rounded-2xl shadow p-4">
                 <label className="block text-sm font-medium text-slate-700">Annual SNAP app. goal per CAN.</label>
                 <div className="mt-3 flex items-center gap-2">
@@ -168,9 +167,9 @@
 
             {/* Metrics row (4 panels) */}
             <section className="grid md:grid-cols-4 gap-4">
-              {/* Annual capacity (based on current settings) */}
+              {/* Annual SNAP app. capacity (based on current settings) */}
               <div className="bg-white rounded-2xl shadow p-4">
-                <div className="text-xs uppercase tracking-wide text-slate-500">
+                <div className="text-xs tracking-wide text-slate-500">
                   Annual SNAP app. capacity <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className={`text-2xl font-semibold mt-1 ${meetsGoal ? "text-emerald-600" : "text-rose-600"}`}>
@@ -178,18 +177,18 @@
                 </div>
               </div>
 
-              {/* Required # of CAN's (based on current settings) */}
+              {/* Required number of CAN's (based on current settings) */}
               <div className="bg-white rounded-2xl shadow p-4">
-                <div className="text-xs uppercase tracking-wide text-slate-500">
-                  Required # of CAN's<br />
+                <div className="text-xs tracking-wide text-slate-500">
+                  Required number of CAN's<br />
                   <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
-                <div className="text-2xl font-semibold mt-1">{nf.format(requiredNavigators)}</div>                
+                <div className="text-2xl font-semibold mt-1">{nf.format(requiredNavigators)}</div>
               </div>
 
               {/* Required individual annual goal (based on current settings) */}
               <div className="bg-white rounded-2xl shadow p-4">
-                <div className="text-xs uppercase tracking-wide text-slate-500">
+                <div className="text-xs tracking-wide text-slate-500">
                   Required individual annual goal <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredIndGoal)}</div>
@@ -197,7 +196,7 @@
 
               {/* Required monthly individual goal (based on current settings) */}
               <div className="bg-white rounded-2xl shadow p-4">
-                <div className="text-xs uppercase tracking-wide text-slate-500">
+                <div className="text-xs tracking-wide text-slate-500">
                   Required monthly individual goal <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredIndGoalMonthly)}</div>
