--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     ))}
                   </div>
                 </div>
+                <p className="mt-2 text-xs text-slate-500">Constrained to range: 17–23.</p>
               </div>
 
               {/* Annual SNAP app. goal per CAN. */}
