--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
                     ))}
                   </div>
                 </div>
+                {/* Removed the "Constrained to range: 17–23." line */}
               </div>
 
-              {/* Annual SNAP application goal per CAN. */}
+              {/* Annual SNAP application goal per CAN */}
               <div className="bg-white rounded-2xl shadow p-4">
                 <label className="block text-sm font-medium text-slate-700">Annual SNAP application goal per CAN</label>
                 <div className="mt-3 flex items-center gap-2">
@@ -186,10 +187,10 @@
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredNavigators)}</div>
               </div>
 
-              {/* Required individual annual goal (based on current settings) */}
+              {/* Required annual individual goal (based on current settings) */}
               <div className="bg-white rounded-2xl shadow p-4">
                 <div className="text-xs tracking-wide text-slate-500">
-                  Required individual annual goal <span className="normal-case text-slate-400">(based on current settings)</span>
+                  Required annual individual goal <span className="normal-case text-slate-400">(based on current settings)</span>
                 </div>
                 <div className="text-2xl font-semibold mt-1">{nf.format(requiredIndGoal)}</div>
               </div>
